--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/slap-editor/slap-clipboard-plugin",
   "dependencies": {
     "bluebird": "^2.9.21",
-    "copy-paste": "^1.0.2",
+    "copy-paste": "xavi-/node-copy-paste#21ccd62874",
     "lazy.js": "^0.4.0",
     "rc": "^1.0.1"
   },
