chore(deps): lazy.js -> lodash

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bluebird": "^2.9.21",
     "copy-paste": "^1.0.4",
-    "lazy.js": "^0.4.0",
+    "lodash": "^3.9.3",
     "rc": "^1.0.1",
     "slap-util": "dbkaplun/slap-util"
   },
