--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "copy-paste": "^1.0.4",
     "lodash": "^3.9.3",
     "rc": "^1.0.1",
-    "slap-util": "dbkaplun/slap-util"
+    "slap-util": "^1.0.0"
   },
   "keywords": [
     "slap-plugin"
